--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "@theblockchainers",
+    "name": "@WINGATE",
     "description": "transfer funds to any wallet",
      "version": "1.0",
      "manifest_version": 3,
